Revert "adding of authorization and registration"
This reverts commit d2026413f18957315fd8fe1dc6e4aff5e7eb276c.

--- a/Coursework/Coursework/views/Main.pug
+++ b/Coursework/Coursework/views/Main.pug
@@ -4,17 +4,13 @@ block content
 	body
 	div(class='menu-container')
 		div(class='menu ')
-			div(class='date') 
-				a(href='/') Aug 14, 2019
+			div(class='date') Aug 14, 2019
 			div(class='links')
-				div(class='signup') 
-					a(href='/registration') SignUp
-				div(class='login') 
-					a(href='/authorization') LogIn
+				div(class='signup') SignUp
+				div(class='login') LogIn
 	div(class='header-container')
 		div(class='header')
 			div(class='subscribe') Subscribe &#9662;
-				
 			div(class='logo')
 				p Книжный магазин, который удивит
 			div(class='social')
@@ -33,3 +29,22 @@ block content
 					a(href='/') Название
 					p Цена
 					a(href='/') Добавить в корзину
+
+
+
+	
+
+	
+			
+
+		
+
+				
+				
+							
+							
+
+
+
+	
+				
