--- a/Coursework/Coursework/public/stylesheets/author.css
+++ b/Coursework/Coursework/public/stylesheets/author.css
@@ -1,123 +1,19 @@
-﻿* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
-body {
-    /*color: #5D6063;
-    background-color: #5995DA; */
-    font-family: "Helvetica", "Arial", sans-serif;
-    font-size: 16px;
-    line-height: 1.3;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
-    vertical-align: middle;
-}
-
-.menu-container {
-    color: #fff;
-    background-color: #5995DA; /* Blue */
-    padding: 20px 0;
-    display: flex;
-    justify-content: center;
-}
-
-    .menu-container a {
-        text-decoration: none;
-    }
-
-.date {
-    margin-left: 10px;
-}
-
-.menu {
-    width: 900px;
-    display: flex;
-    justify-content: space-between;
-}
-
-.links {
-    /*border: 1px solid #fff;  For debugging */
-    display: flex;
-    justify-content: flex-end;
-}
-
-.login {
-    margin-left: 20px;
-    margin-right: 10px;
-}
-
-
-.header-container {
-    color: #5995DA;
-    background-color: #D6E9FE;
-    display: flex;
-    justify-content: center;
-    padding: 50px;
-}
-
-.header {
-    width: 900px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.search-form {
-    background-color: #F6F7F8;
-    border: 1px solid #D6D9DC;
-    border-radius: 3px;
-    padding: 10px;
-    display: flex;
-    justify-content: space-between;
-}
-
-    .search-form input[type='text'] {
-        background-color: #FFFFFF;
-        border: 1px solid #D6D9DC;
-        border-radius: 3px;
-        width: 100%;
-        padding: 7px;
-        font-size: 14px;
-    }
-
-        .search-form input[type='text']:invalid {
-            border: 1px solid #D55C5F;
-            color: #D55C5F;
-            box-shadow: none;
-        }
-
-    .search-form button {
-        font-size: 14px;
-        font-weight: bold;
-        color: #FFFFFF;
-        background-color: #5995DA;
-        border: none;
-        border-radius: 3px;
-        padding: 5px 20px;
-        cursor: pointer;
-        margin-left: 10px;
-        margin-right: 10px;
-    }
-
-.speaker-form {
+﻿.speaker-form {
     background-color: cornflowerblue;
     border: 1px solid #D6D9DC;
     border-radius: 3px;
-    display: block;
+    display: flex;
+    flex-direction: column;
     justify-content: center;
-    text-align:center;
+    text-align: center;
     padding: 50px;
     margin: 0 0 40px 0;
     height: auto;
 }
 
-form-row {
+.form-row {
     margin-bottom: 40px;
-    clear: both;
-    display: inline-block;
+    display: block;
     flex-wrap: wrap;
 }
 
