--- a/Coursework/Coursework/public/stylesheets/main.css
+++ b/Coursework/Coursework/public/stylesheets/main.css
@@ -5,50 +5,108 @@
     box-sizing: border-box;
 }
 
-.body {
+a:link {
+    color: #5995DA;
+    text-decoration: none;
+}
+
+a:visited {
+    color: #407FC7;
+}
+
+    a:hover,
+    a:visited:hover {
+        color: #76AEED;
+        border-bottom: 1px solid #76AEED;
+    }
+
+    a:active,
+    a:visited:active {
+        color: #5995DA;
+    }
+
+code {
+    color: #7E8184;
+}
+
+a:link code,
+a:visited code,
+a:hover code,
+a:visited:hover code,
+a:active code,
+a:visited:active code {
+    color: inherit;
+}
+
+body {
     /*color: #5D6063;
     background-color: #EAEDF0; */
-    
     font-family: "Helvetica", "Arial", sans-serif;
     font-size: 16px;
     line-height: 1.3;
     display: flex;
+    position: relative;
+    z-index: 1;
 }
 
-a{
-    text-decoration: none;
+.page {
+    /* Gradient page background */
+    background-color: #F9FAFB;
+    background: -webkit-linear-gradient(bottom, #F9FAFB 0%, #FFFFFF 100%);
+    background: linear-gradient(to top, #F9FAFB 0%, #FFFFFF 100%);
+    background-repeat: no-repeat;
+    width: 100%;
+    /* Need these so the .subheading rule shows */
+    position: relative;
+    z-index: -100;
+    overflow: hidden;
+    /* This top margin should match .main-nav height */
+    margin-top: 40px;
 }
+
 
 .menu-container {
-    color: #fff;
-    background-color: #5995DA; /* Blue */
+    color: #5D6063;
+    background-color: #FFFFFF;
+    font-size: 14px;
+    line-height: 26px;
+
     padding: 20px 0;
     display: flex;
-    justify-content: center; /* to define the horizontal alignment of its items*/
+    
+    align-items: center;
+    justify-content: center;
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1000;
+    box-shadow: 0 2px 0 rgba(93, 96, 99, .1);
+
+    
+    width: 100%;
+    height: 40px;
+    padding: 0 13px;
 }
+
 .menu-container a {
     text-decoration: none;
 }
-    .date {
-    margin-left: 10px;
+
+.menu {
+    width: 900px;
+    display: flex;
+    justify-content: space-between;
 }
+/* .date {
+    margin-left: 10px;
+}*/   
 
-    .menu {
-        width: 900px;
-        display: flex;
-        justify-content: space-between;
-    }
 
-    .links {
-        /*border: 1px solid #fff;  For debugging */
-        display: flex;
-        justify-content: flex-end;
-    }
 
-    .login {
+/* .login  {
     margin-left: 20px;
     margin-right: 10px;
-}
+}*/
 
 
 .header-container {
@@ -56,15 +114,24 @@ a{
     background-color: #D6E9FE;
     display: flex;
     justify-content: center;
-   
     padding: 50px;
+    
+    align-self: center;
 }
 
     .header {
-        width: 900px;
         display: flex;
-        justify-content: space-between;
         align-items: center;
+        width: 900px;
+        justify-content: space-between;
+    }
+
+    .social,
+    .subscribe {
+       
+        
+        justify-content: flex-start;
+        
     }
 
 .search-form {
@@ -89,26 +156,7 @@ a{
             box-shadow: none;
         }
 
-.button:link, 
-.button:visited {
-   
-    text-decoration: none; 
-    color: #FFF; 
-    background-color: #5995DA;
-    font-weight: bold;
-    padding: 20px;
-    text-align: center;
-    border: 2px solid #5D6063;
-    border-radius: 5px;
-    width: 100px;
-    margin: 20px auto;
-}
 
-    .button:hover,
-    .button:visited:hover {
-        color: #FFF;
-        background-color: #76AEED; /* Light blue */
-    }
 
 .search-form button {
     font-size: 14px;
@@ -136,23 +184,15 @@ a{
 }
 
 .sidebar {
-    width: 400px;
+    width: 30%;
     display: flex;
     background-color: #B2D6FF;
     justify-content: flex-start;
     padding-left: 5px;
     flex-direction: column;
 }
-.content-grid-basket {
-    display: flex;
-    justify-content: flex-start;
-    flex-direction: column;
-}
 
-.content-grid-basket li{
-    display: block;
-    justify-content: center;
-}
+
 
 .sidebar li {
     justify-content: center;
@@ -160,7 +200,7 @@ a{
     display: block
 }
 
-    .sidebar a {
+    .sidebar a{
         display: block;
         color: #5D6063;
         padding: 16px;
@@ -173,11 +213,7 @@ a{
            
         }
     
-.social,
-.subscribe {
-    align-self: center;
-    
-}
+
 
 .book-grid {
     flex-direction: column;
@@ -185,6 +221,8 @@ a{
     width: 300px;
     height: 300px;
     padding: 5px;
+    border: 1px solid #D6D9DC;
+    border-radius: 2px;
 }
 
     .book-grid a {
@@ -226,12 +264,7 @@ li{
     display: table;
     width: auto;
 } */
-
-
-
-
-
-.call-to-action {
+    .call-to-action {
     font-style: italic;
     background-color: #EEB75A; /* Yellow */
 }
@@ -250,3 +283,23 @@ li{
         .call-to-action:visited:active {
             background-color: #EEB75A; /* Yellow */
         }
+
+.button:link,
+.button:visited {
+    text-decoration: none;
+    color: #FFF;
+    background-color: #5995DA;
+    font-weight: bold;
+    padding: 20px;
+    text-align: center;
+    border: 2px solid #5D6063;
+    border-radius: 5px;
+    width: 100px;
+    margin: 20px auto;
+}
+
+    .button:hover,
+    .button:visited:hover {
+        color: #FFF;
+        background-color: #76AEED; /* Light blue */
+    }
