--- a/Coursework/Coursework/views/Main.pug
+++ b/Coursework/Coursework/views/Main.pug
@@ -2,34 +2,43 @@
 
 block content
 	body
-	div(class='menu-container')
-		div(class='menu ')
-			div(class='date') 
-				a(href='/') Aug 14, 2019
-			div(class='links')
+	div(class='page')
+		div(class='menu-container')
+			div(class='menu')
+				div(class='date') 
+					a(href='/') Aug 14, 2019
+				div(class='cart')
+					a(href='/cart') Cart
 				div(class='signup') 
 					a(href='/registration') SignUp
 				div(class='login') 
 					a(href='/authorization') LogIn
-	div(class='header-container')
-		div(class='header')
-			div(class='subscribe') Subscribe &#9662;
+				div(class='orders')
+					a(href='/orders') Orders
+		div(class='header-container')
+			div(class='header')
+				div(class='subscribe') Subscribe &#9662;
 				
-			div(class='logo')
-				p Книжный магазин, который удивит
-			div(class='social')
-	form(class='search-form' action='/' method='post')
-		input(id='request' name='request' type='text')
-		button Submit
-	div(class='content-grid-container')
-		div(class='sidebar') 
-			each genre in genres
-				li 
-					a(href = '/') #{genre.name} 
-		div(class='content-grid')
-			-for(var x = 0; x < 9; x++)
-				div(class='book-grid')
-					img(src='')
-					a(href='/') Название
-					p Цена
-					a(href='/') Добавить в корзину
+				div(class='logo')
+					p Книжный магазин, который удивит
+				div(class='social')
+		form(class='search-form' action='/' method='post')
+			input(id='request' name='request' type='text')
+			button Submit
+		div(class='content-grid-container')
+			div(class='sidebar') 
+				each genre in genres
+					li 
+						a(href = '/') #{genre.name} 
+			div(class='content-grid')
+				-for(var x = 0; x < 9; x++)
+					div(class='book-grid')
+						img(src='')
+						a(href='/') Название
+						p Цена
+						a(href='/') Добавить в корзину
+						
+						
+						
+
+		
