--- a/Coursework/Coursework/views/registration.pug
+++ b/Coursework/Coursework/views/registration.pug
@@ -12,6 +12,8 @@ html
 				div(class='menu ')
 					div(class='date') Aug 14, 2019
 					div(class='links')
+						div(class='cart')
+							a(href='cart')
 						div(class='login') 
 							a(href='/authorization') LogIn
 			div(class='header-container')
@@ -26,11 +28,11 @@ html
 			div(class='speaker-form')
 				form(action='/registration' method='post' enctype='multipart/form-data')
 						div(class='form-row')
-							label(for='first-name') First Name
-							input(id='first-name' name='first-name' type='text')
+							label(for='first_name') First Name
+							input(id='first_name' name='first_name' type='text')
 						div(class='form-row')
-							label(for='last-name') Last Name
-							input(id='last-name' name='last-name' type='text')
+							label(for='last_name') Last Name
+							input(id='last_name' name='last_name' type='text')
 						div(class='form-row')
 							label(for='patronymic') patronymic
 							input(id='patronymic' name='patronymic' type='text')
@@ -42,25 +44,33 @@ html
 							input(id='phone' name='phone' type='text')
 						div(class='form-row')
 							label(for='type') Type
-							select(id='type' name='type' )
-								option(value='customer' id='customer' onclick) Customer
+							select(id='type' name='type' onchange="display_position(this);" )
+								option(value='customer' id='customer' selected) Customer
 								option(value='vendor' id='vendor') Vendor
 								option(value='courier' id='courier') Courier
 						script
-							document.getElementById('customer').onclick = function(){
+							- var selected_state
+
+							function display_position(obj){
+								selected_state = obj.value
+								
+								if(selected_state == 'customer'){ display_block();}
+								else if(selected_state == 'courier'){ no_display_block();}
+								else if(selected_state == 'vendor'){ display_block();}
+							}
+
+							
+							function display_block(){
 								document.getElementById('position').style.display = 'flex';}
-						script
-							document.getElementById('vendor').onclick = function(){
+
+							function no_display_block(){
 								document.getElementById('position').style.display = 'none';}
-				
-						script
-							document.getElementById('courier').onclick = function(){
-								document.getElementById('position').style.display = 'none';}
+							
 				
 				
-						div(class='form-row' id='position' display='none')
+						div(class='form-row' id='position' style='display:none')
 							label(for='input-position') Position
-							select(name='form-position')
+							select(name='position')
 								each position in positions
 									option(value=position) #{position.name_of_position}
 						div(class='form-row')
