--- a/Coursework/Coursework/views/Main.pug
+++ b/Coursework/Coursework/views/Main.pug
@@ -9,12 +9,16 @@ block content
 					a(href='/') Aug 14, 2019
 				div(class='cart')
 					a(href='/cart') Cart
-				div(class='signup') 
-					a(href='/registration') SignUp
-				div(class='login') 
-					a(href='/authorization') LogIn
 				div(class='orders')
 					a(href='/orders') Orders
+				if id == 1
+					div(class='signup')
+						a(href='/registration') SignUp
+					div(class='login') 
+						a(href='/authorization') LogIn
+				else
+						div(class='signup') Welcome #{id}
+				
 		div(class='header-container')
 			div(class='header')
 				div(class='subscribe') Subscribe &#9662;
@@ -29,13 +33,16 @@ block content
 			div(class='sidebar') 
 				each genre in genres
 					li 
-						a(href = '/') #{genre.name} 
+						a(href ='/') #{genre.name} 
 			div(class='content-grid')
-				-for(var x = 0; x < 9; x++)
+				-for(var x = 0; x < books.length; x++)
 					div(class='book-grid')
-						img(src='')
-						a(href='/') Название
-						p Цена
+						div(class='book-grid-image')
+							img(src='')
+						
+						a(href='/book/'+ books[x]['id'] ) #{books[x]['book_name']}
+						p 
+						p #{books[x]['price']}
 						a(href='/') Добавить в корзину
 						
 						
