--- a/Coursework/Coursework/views/authorization.pug
+++ b/Coursework/Coursework/views/authorization.pug
@@ -32,10 +32,10 @@ html
 				div(class='speaker-form')
 					form(action='/authorization' method='post'  enctype='multipart/form-data')
 						div(class='form-row')
-							label(for='first_name') First Name
+							label(for='first_name') First name
 							input(id='first_name' name='first_name' type='text')
 						div(class='form-row')
-							label(for='last_name') Last-name
+							label(for='last_name') Last name
 							input(id='last_name' name='last_name' type='text')
 						div(class='form-row')
 							label(for='email') Email
