--- a/Coursework/Coursework/views/registration.pug
+++ b/Coursework/Coursework/views/registration.pug
@@ -2,79 +2,90 @@
 html
 	head
 		title=title
-		
+		link(rel='stylesheet', href='/stylesheets/main.css')
 		link(rel='stylesheet', href='/stylesheets/author.css')
 		<meta charset='UTF-8'>
 	
 		block content
 			body
-			div(class='menu-container')
-				div(class='menu ')
-					div(class='date') Aug 14, 2019
-					div(class='links')
+			div(class='page')
+				div(class='menu-container')
+					div(class='menu')
+						div(class='date') 
+							a(href='/') Aug 14, 2019
 						div(class='cart')
-							a(href='cart')
+							a(href='/cart') Cart
+						div(class='signup') 
+							a(href='/registration') SignUp
 						div(class='login') 
 							a(href='/authorization') LogIn
-			div(class='header-container')
-				div(class='header')
-					div(class='subscribe') Subscribe &#9662;
-					div(class='logo')
-						p Книжный магазин, который удивит
-					div(class='social')
-			form(class='search-form' action='/' method='post')
-				input(id='request' name='request' type='text')
-				button Submit
-			div(class='speaker-form')
-				form(action='/registration' method='post' enctype='multipart/form-data')
-						div(class='form-row')
-							label(for='first_name') First Name
-							input(id='first_name' name='first_name' type='text')
-						div(class='form-row')
-							label(for='last_name') Last Name
-							input(id='last_name' name='last_name' type='text')
-						div(class='form-row')
-							label(for='patronymic') patronymic
-							input(id='patronymic' name='patronymic' type='text')
-						div(class='form-row')
-							label(for='email') Email
-							input(id='email' name='email' type='email'  placeholder='joe@example.com')
-						div(class='form-row')
-							label(for='phone') Phone
-							input(id='phone' name='phone' type='text')
-						div(class='form-row')
-							label(for='type') Type
-							select(id='type' name='type' onchange="display_position(this);" )
-								option(value='customer' id='customer' selected) Customer
-								option(value='vendor' id='vendor') Vendor
-								option(value='courier' id='courier') Courier
-						script
-							- var selected_state
+						div(class='orders')
+							a(href='/orders') Orders
+				div(class='header-container')
+					div(class='header')
+						div(class='subscribe') Subscribe &#9662;
+						div(class='logo')
+							p Книжный магазин, который удивит
+						div(class='social')
+				form(class='search-form' action='/' method='post')
+					input(id='request' name='request' type='text')
+					button Submit
+				div(class='speaker-form')
+					form(action='/registration' method='post' enctype='multipart/form-data')
+							div(class='form-row')
+								label(for='first_name') First Name
+								input(id='first_name' name='first_name' type='text')
+							div(class='form-row')
+								label(for='last_name') Last Name
+								input(id='last_name' name='last_name' type='text')
+							div(class='form-row')
+								label(for='patronymic') patronymic
+								input(id='patronymic' name='patronymic' type='text')
+							div(class='form-row')
+								label(for='email') Email
+								input(id='email' name='email' type='email'  placeholder='joe@example.com')
+							div(class='form-row')
+								label(for='phone') Phone
+								input(id='phone' name='phone' type='tel')
+							div(class='form-row')
+								label(for='date') Date of birth
+								input(id='date' name='date' type='date')
+							div(class='form-row')
+								label(for='type') Type
+								select(id='type' name='type' onchange="display_position(this);" )
+									option(value='customer' id='customer' selected) Customer
+									option(value='vendor' id='vendor') Vendor
+									option(value='courier' id='courier') Courier
+					
+							script.
 
-							function display_position(obj){
-								selected_state = obj.value
+								function display_block(){
+									document.getElementById('position').style.display = 'block';}
+
+								function no_display_block(){
+									document.getElementById('position').style.display = 'none';}
+
+								var selected_state;
 								
-								if(selected_state == 'customer'){ display_block();}
-								else if(selected_state == 'courier'){ no_display_block();}
-								else if(selected_state == 'vendor'){ display_block();}
-							}
+								function display_position(obj){
+									var selected_state = obj.value;
+									if(selected_state == 'customer') no_display_block()
+									else if(selected_state == 'courier') no_display_block()
+									else if(selected_state == 'vendor') display_block()
+								}
 
 							
-							function display_block(){
-								document.getElementById('position').style.display = 'flex';}
-
-							function no_display_block(){
-								document.getElementById('position').style.display = 'none';}
-							
+								
 				
 				
-						div(class='form-row' id='position' style='display:none')
-							label(for='input-position') Position
-							select(name='position')
-								each position in positions
-									option(value=position) #{position.name_of_position}
-						div(class='form-row')
-							button Submit
+							div(class='form-row' id='position' style='display: none' ) 
+								label(for='input-position') Position
+								select(name='position')
+									each position in positions
+										option(value=position id=position) #{position.name_of_position}
+								
+							div(class='form-row')
+								button Submit
 
 
 
