--- a/Coursework/Coursework/views/cart.pug
+++ b/Coursework/Coursework/views/cart.pug
@@ -35,21 +35,25 @@ block content
 			button Submit
 		div(class='content-grid-container')
 			div(class='content-grid-basket')
-				-for(var x = 0; x < 9; x++)
+				each book in books
 					div(class='content-grid-basket-cell')
 						div(class='basket-image')
 						div(class='basket-book')
 							div(class='basket-cell-top')
-								a(href='/' class='my_href') Название книги
-							div(class='basket-cell-bottom') Цена
+								a(href='/book/'+ book.id class='my_href') #{book.book_name}
+							div(class='basket-cell-bottom') #{book.price}
 						div(class='basket-quantity')
 							div(class='basket-cell-top') Количество
-							div(class='basket-cell-bottom') textarea
+							div(class='basket-cell-bottom') #{book.quantity}
+								form(action='/add_to_сart?book_id='+ book.id method=post)
+									input(type='number' name="increment" onblur="submit();" min='1')
 						div(class='basket-cost')
 							div(class='basket-cell-top') Итог
-							div(class='basket-cell-bottom') Цифра
+							div(class='basket-cell-bottom') #{book.result}
+						div(class='basket-delete') Удалить
+							
 			div(class='price-container')
 				div(class='price-cell') Сумма
-					p 450
+					p #{result}
 					a(href='/order') Order
 				//-div(class='price-cell')
