--- a/Coursework/Coursework/views/layout.pug
+++ b/Coursework/Coursework/views/layout.pug
@@ -4,5 +4,6 @@ html
 		title=title
 		link(rel='stylesheet', href='/stylesheets/main.css')
 		<meta charset='UTF-8'>
+		script(src='/ajax.js') 
 	body
 		block content
