--- a/Coursework/Coursework/views/order.pug
+++ b/Coursework/Coursework/views/order.pug
@@ -11,16 +11,23 @@ html
 			div(class='page')
 				div(class='menu-container')
 					div(class='menu ')
-						div(class='main') 
-							a(href='/') Aug 14, 2019
-						div(class='cart')
-							a(href='/cart') Cart
-						div(class='signup') 
+						div(class='date') 
+						a(href='/') Aug 14, 2019
+					div(class='cart')
+						a(href='/cart') Cart
+					div(class='orders')
+						a(href='/orders') Orders
+					if id == 1
+						div(class='signup')
 							a(href='/registration') SignUp
 						div(class='login') 
 							a(href='/authorization') LogIn
-						div(class='orders')
-							a(href='/orders') Orders
+					else
+						div(class='user-links')
+							div(class='signup') Welcome #{id}
+							form(action='/' method='post' class='logout')
+								input(type='hidden' name='button-submit' id='button-submit')
+								button(class='button-link') Logout
 				div(class='header-container')
 					div(class='header')
 						div(class='subscribe') Subscribe &#9662;
@@ -46,9 +53,10 @@ html
 								select(id='type' name='type')
 									option(value='pickup' id='pickup' selected) Pickup
 									option(value='delivery' id='delivery') Delivery
+									//Здесь будет цена 
 							div(class='form-row')
-								label(for='adress') Adress
-								input(id='adress' name='adress' type='text')
+								label(for='price') Price
+								input(id='price' name='price' type='text')
 							div(class='form-row')
 								label(for='adress') Adress
 								input(id='adress' name='adress' type='text')
@@ -57,8 +65,9 @@ html
 								textarea(id='comments' name='comments')
 								div(class='instructions') Describe your talk in 500 words or less
 
-							div(class='form-row')
-								button Submit
+							div(class='form-row') 
+								//это будет скорей всего ссылка на страничку оплаты
+								 Submit
 
 
 
