--- a/Coursework/Coursework/views/orders.pug
+++ b/Coursework/Coursework/views/orders.pug
@@ -5,6 +5,7 @@ html
 		link(rel='stylesheet', href='/stylesheets/main.css')
 		link(rel='stylesheet', href='/stylesheets/orders.css')
 		<meta charset='UTF-8'>
+		script(src='/ajax.js')
 	body
 		block content
 
@@ -16,13 +17,20 @@ block content
 				div(class='date') 
 					a(href='/') Aug 14, 2019
 				div(class='cart')
-						a(href='/cart') Cart
-				div(class='signup') 
-					a(href='/registration') SignUp
-				div(class='login') 
-					a(href='/authorization') LogIn
+					a(href='/cart') Cart
 				div(class='orders')
 					a(href='/orders') Orders
+				if id == 1
+					div(class='signup')
+						a(href='/registration') SignUp
+					div(class='login') 
+						a(href='/authorization') LogIn
+				else
+					div(class='user-links')
+						div(class='signup') Welcome #{id}
+						form(action='/' method='post' class='logout')
+							input(type='hidden' name='button-submit' id='button-submit')
+							button(class='button-link') Logout
 		div(class='header-container')
 			div(class='header')
 				div(class='subscribe') Subscribe &#9662;
@@ -34,19 +42,52 @@ block content
 			button Submit
 		div(class='content-grid-container')
 			div(class='content-grid-basket')
-				div(class='content-order')
-					-for(var x = 0; x < 9; x++)
+				-var order_id = order_id
+				-for(var i = 0; i < orders.length; i++)
+					if order_id != orders[i]['id_cart'] && i != (orders.length-1)
 						div(class='content-grid-basket-cell')
 							div(class='basket-image')
 							div(class='basket-book')
 								div(class='basket-cell-top')
-									a(href='/' class='my_href') Название книги
-								div(class='basket-cell-bottom') Цена
+									a(href='/book/' + orders[i]['book_id'] class='my_href') #{orders[i]['book_name']}
+								div(class='basket-cell-bottom') #{orders[i]['book_price']}
 							div(class='basket-quantity')
 								div(class='basket-cell-top') Количество
-								div(class='basket-cell-bottom') textarea
+								div(class='basket-cell-bottom') #{orders[i]['quantity']}
 							div(class='basket-cost')
 								div(class='basket-cell-top') Итог
-								div(class='basket-cell-bottom') Цифра
-				
+								div(class='basket-cell-bottom') #{orders[i]['quantity'] * orders[i]['book_price']}
+					else
+						- var order_id = orders[i]['id_cart']
+						div(class='content-grid-basket-cell')
+							div(class='basket-image')
+							div(class='basket-book')
+								div(class='basket-cell-top')
+									a(href='/book/' + orders[i]['book_id'] class='my_href') #{orders[i]['book_name']}
+								div(class='basket-cell-bottom') #{orders[i]['book_price']}
+							div(class='basket-quantity')
+								div(class='basket-cell-top') Количество
+								div(class='basket-cell-bottom') #{orders[i]['quantity']}
+							div(class='basket-cost')
+								div(class='basket-cell-top') Итог
+								div(class='basket-cell-bottom') #{orders[i]['quantity'] * orders[i]['book_price']}
+						div(class='content-grid-basket-cell')
+							div(class='detail-cell')
+								div(class='details' id='details'+ orders[i]['id_cart'] style='display: block')
+									p Дата заказа #{orders[i]['date_of_order']}
+									p Полное имя #{orders[i]['full_name']}
+									p Адрес #{orders[i]['adress']}
+									p Почта #{orders[i]['email']}
+									p Телефон #{orders[i]['phone']}
+									if orders[i]['price_of_delivery'] > 0
+										p Цена доставки #{orders[i]['price_of_delivery']}
+									button(onclick='close_details()' class='details')
+								button(class='button-relative' onclick='show_details('+ orders[i]['id_cart'] +')') Details
+							div(class='payment')
+								a(href='/pay/'+ orders[i]['id_cart'] ) Pay
+							div(class='result')
+								p #{orders[i]['result']}
+					
+						
+
 				// Здесь будет кнопка, показывающая дополнительные параметры покупки
