--- a/Coursework/Coursework/views/registration.pug
+++ b/Coursework/Coursework/views/registration.pug
@@ -15,12 +15,19 @@ html
 							a(href='/') Aug 14, 2019
 						div(class='cart')
 							a(href='/cart') Cart
-						div(class='signup') 
-							a(href='/registration') SignUp
-						div(class='login') 
-							a(href='/authorization') LogIn
 						div(class='orders')
 							a(href='/orders') Orders
+						if id == 1
+							div(class='signup')
+								a(href='/registration') SignUp
+							div(class='login') 
+								a(href='/authorization') LogIn
+						else
+							div(class='user-links')
+								div(class='signup') Welcome #{id}
+								form(action='/' method='post' class='logout')
+									input(type='hidden' name='button-submit' id='button-submit')
+									button(class='button-link') Logout
 				div(class='header-container')
 					div(class='header')
 						div(class='subscribe') Subscribe &#9662;
