--- a/Coursework/Coursework/views/pay.pug
+++ b/Coursework/Coursework/views/pay.pug
@@ -38,9 +38,9 @@ html
 						div(class='social')
 				div(class='speaker-form')
 						div(class='form-row')
-							p #{result}
+							p Платить столько: #{result}
 							// ссылка на главную
-							button(onclick = 'update_date_of_pay('+ cart_id + ')') Оплатить
+							button(onclick = 'update_date_of_pay('+ cart_id + ')' ) Оплатить
 						
 
 
