--- a/Coursework/Coursework/views/layout.pug
+++ b/Coursework/Coursework/views/layout.pug
@@ -5,5 +5,6 @@ html
 		link(rel='stylesheet', href='/stylesheets/main.css')
 		<meta charset='UTF-8'>
 		script(src='/ajax.js') 
+		script(src='/images.js') 
 	body
 		block content
