--- a/Coursework/Coursework/public/stylesheets/main.css
+++ b/Coursework/Coursework/public/stylesheets/main.css
@@ -242,7 +242,7 @@ body {
 .content-grid {
     display: flex;
     flex-wrap: wrap;
-    justify-content: space-around;
+    justify-content: space-between;
 }
 
 
@@ -255,14 +255,13 @@ body {
     height: 300px;
     border: 1px solid #D6D9DC;
     border-radius: 2px;
-    margin: 5px 10px 10px 15px;
+    margin: 10px 10px 10px 10px;
 }
     
 
 
 .book-grid-image {
     display: flex;
-    border: 2px solid #76AEED;
     height: 200px;
     width: 200px;
 }
