--- a/Coursework/Coursework/views/orders.pug
+++ b/Coursework/Coursework/views/orders.pug
@@ -42,51 +42,76 @@ block content
 			button Submit
 		div(class='content-grid-container')
 			div(class='content-grid-basket')
-				-var order_id = order_id
+				-var order_id = orders[0]['id_cart']
 				-for(var i = 0; i < orders.length; i++)
-					if order_id != orders[i]['id_cart'] && i != (orders.length-1)
-						div(class='content-grid-basket-cell')
-							div(class='basket-image')
-							div(class='basket-book')
-								div(class='basket-cell-top')
-									a(href='/book/' + orders[i]['book_id'] class='my_href') #{orders[i]['book_name']}
-								div(class='basket-cell-bottom') #{orders[i]['book_price']}
-							div(class='basket-quantity')
-								div(class='basket-cell-top') Количество
-								div(class='basket-cell-bottom') #{orders[i]['quantity']}
-							div(class='basket-cost')
-								div(class='basket-cell-top') Итог
-								div(class='basket-cell-bottom') #{orders[i]['quantity'] * orders[i]['book_price']}
-					else
-						- var order_id = orders[i]['id_cart']
-						div(class='content-grid-basket-cell')
-							div(class='basket-image')
-							div(class='basket-book')
-								div(class='basket-cell-top')
-									a(href='/book/' + orders[i]['book_id'] class='my_href') #{orders[i]['book_name']}
-								div(class='basket-cell-bottom') #{orders[i]['book_price']}
-							div(class='basket-quantity')
-								div(class='basket-cell-top') Количество
-								div(class='basket-cell-bottom') #{orders[i]['quantity']}
-							div(class='basket-cost')
-								div(class='basket-cell-top') Итог
-								div(class='basket-cell-bottom') #{orders[i]['quantity'] * orders[i]['book_price']}
+					if (i == (orders.length - 1))
 						div(class='content-grid-basket-cell')
 							div(class='detail-cell')
-								div(class='details' id='details'+ orders[i]['id_cart'] style='display: block')
-									p Дата заказа #{orders[i]['date_of_order']}
+								div(class='details' id='details_'+ orders[i-1]['id_cart'] style='display: none' )
+									p Дата заказа #{orders[i]['date_of_order']} #{orders[i-1]['id_cart']}
 									p Полное имя #{orders[i]['full_name']}
 									p Адрес #{orders[i]['adress']}
 									p Почта #{orders[i]['email']}
 									p Телефон #{orders[i]['phone']}
 									if orders[i]['price_of_delivery'] > 0
 										p Цена доставки #{orders[i]['price_of_delivery']}
-									button(onclick='close_details()' class='details')
-								button(class='button-relative' onclick='show_close_details('+ orders[i]['id_cart'] +')') Details
-							div(class='payment')
-								a(href='/pay/'+ orders[i]['id_cart'] ) Pay
-							div(class='result')
-								p #{orders[i]['result']}
+								button(class='button-relative' onclick='show_close_details('+ orders[i-1]['id_cart'] +')' ) Details
+							if (orders[i]['date_of_payment'] == null)
+								div(class='payment')
+									a(href='/pay/'+ orders[i-1]['id_cart'] ) Pay
+							else
+								div(class='payment') 
+									p Дата оплаты: #{orders[i]['date_of_payment']}
+								div(class='result')
+									p #{orders[i]['result']}
+					else if order_id == orders[i]['id_cart'] 
+						div(class='content-grid-basket-cell')
+							div(class='basket-image')
+							div(class='basket-book')
+								div(class='basket-cell-top')
+									a(href='/book/' + orders[i]['book_id'] class='my_href') #{orders[i]['book_name']}
+								div(class='basket-cell-bottom') #{orders[i]['book_price']}
+							div(class='basket-quantity')
+								div(class='basket-cell-top') Количество
+								div(class='basket-cell-bottom') #{orders[i]['quantity']} #{orders.length}
+							div(class='basket-cost')
+								div(class='basket-cell-top') Итог
+								div(class='basket-cell-bottom') #{orders[i]['quantity'] * orders[i]['book_price']}
+					else
+						- var order_id = orders[i]['id_cart']
+						div(class='content-grid-basket-cell')
+							div(class='detail-cell')
+								div(class='details' id='details_'+ orders[i-1]['id_cart'] style='display: none')
+									p Дата заказа #{orders[i]['date_of_order']}
+									p Полное имя #{orders[i]['full_name']} #{orders[i-1]['id_cart']}
+									p Адрес #{orders[i]['adress']}
+									p Почта #{orders[i]['email']}
+									p Телефон #{orders[i]['phone']}
+									if orders[i]['price_of_delivery'] > 0
+										p Цена доставки #{orders[i]['price_of_delivery']}
+									//button(onclick='close_details()' class='details')
+								button(class='button-relative' onclick='show_close_details('+ orders[i-1]['id_cart'] +')' ) Details
+							if (orders[i]['date_of_payment'] == null)
+								div(class='payment')
+									a(href='/pay/'+ orders[i-1]['id_cart'] ) Pay
+							else
+								div(class='payment') 
+									p Дата оплаты: #{orders[i]['date_of_payment']}
+								div(class='result')
+									p #{orders[i]['result']}
+						div(class='content-grid-basket-cell')
+							div(class='basket-image')
+							div(class='basket-book')
+								div(class='basket-cell-top')
+									a(href='/book/' + orders[i]['book_id'] class='my_href') #{orders[i]['book_name']}
+								div(class='basket-cell-bottom') #{orders[i]['book_price']}
+							div(class='basket-quantity')
+								div(class='basket-cell-top') Количество
+								div(class='basket-cell-bottom') #{orders[i]['quantity']}
+							div(class='basket-cost')
+								div(class='basket-cell-top') Итог
+								div(class='basket-cell-bottom') #{orders[i]['quantity'] * orders[i]['book_price']}
+						
 					
 						
 
